// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatIcon component should render with custom props 1`] = `
<div
  onClick={null}
  onKeyUp={null}
  role="button"
  tabIndex="0"
>
  <div
    className="letstalk-ChatIconContainer"
  >
    <StyledButton
      height={50}
      margin="0px 10px 0px 0px"
      type="circle"
      width={50}
    >
      <span />
      <MdChat
        color="white"
        size={20}
      />
    </StyledButton>
  </div>
</div>
`;

exports[`ChatIcon component should render with no props 1`] = `
<div
  onClick={null}
  onKeyUp={null}
  role="button"
  tabIndex="0"
>
  <div
    className="letstalk-ChatIconContainer"
  >
    <StyledButton
      height={50}
      margin=""
      type="rounded"
      width={250}
    >
      <span />
      <MdChat
        color="white"
        size={20}
      />
    </StyledButton>
  </div>
</div>
`;
